--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,15 @@
 @charset "utf-8";
+
+.first-view {
+    height: calc(100vh - 110px);
+    background-image: url(../images/index/bg_main.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
+
 *,
 ::before,
 ::after {
@@ -6,23 +17,28 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 ul, ol {
     list-style: none;
 }
+
 a {
     color: inherit;
     text-decoration: none;
 }
+
 body {
     font-family: sans-serif;
     font-size: 16pt;
     color: #000000;
     line-height: 1;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
 }
-img{
+
+img {
     max-width: 100%;
 }
+
 .header-inner {
     max-width: 1200px;
     height: 110px;
@@ -34,23 +50,73 @@ img{
     justify-content: space-between;
     align-items: center;
 }
-.toggle-menu-botton {
+
+.toggle-menu-button {
     display: none;
 }
+
 .header-logo {
     display: block;
     width: 170px;
 }
+
 .site-menu ul {
     display: flex;
 }
+
 .site-menu ul li {
     margin-left: 20px;
     margin-right: 20px;
 }
+
 .site-menu ul li a {
-    font-family: 'Noto Serif JP', serif;
+    font-family: 'Cherry Bomb One', cursive;
 }
+
+@media (max-width: 800px) {
+    .site-menu ul {
+        display: block;
+        text-align: center;
+    }
+
+    .site-menu li {
+        margin-top: 20px;
+    }
+
+    .header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        background-color: #ffffff;
+        height: 50px;
+        z-index: 10;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .header-inner {
+        padding-left: 20px;
+        padding-right: 20px;
+        height: 100%;
+    }
+
+    .header-logo {
+        width: 100px;
+    }
+
+    .main {
+        padding-top: 50px;
+    }
+
+    .footer-logo {
+        margin-top: 60px;
+    }
+
+    .copyright {
+        margin-top: 50px;
+    }
+}
+
 .footer {
     color: #ffffff;
     background-color: #24211b;
@@ -60,13 +126,15 @@ img{
     flex-direction: column;
     align-items: center;
 }
+
 .footer-logo {
     display: block;
     width: 235px;
     margin-top: 90px;
 }
+
 .copyright {
-    font-size: 14px;
+    font-size: 14pt;
     font-weight: bold;
     margin-top: 90px;
 }
