--- a/css/common.css
+++ b/css/common.css
@@ -98,11 +98,43 @@ img {
         padding-left: 20px;
         padding-right: 20px;
         height: 100%;
+        position: relative;
     }
 
     .header-logo {
         width: 100px;
     }
+
+    .header-site-menu {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        left: 0;
+        color: #ffffffff;
+        background-color: #736e69;
+        padding-top: 30px;
+        padding-bottom: 50px;
+        display: none;
+    }
+
+    .header-site-menu.is-show{
+        display: block;
+    }
+
+    .toggle-menu-button {
+        display: block;
+        width: 44;
+        height: 34;
+        background-image: url(../images/common/icon-menu.png);
+        background-size: 50%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: transparent;
+        border: none;
+        border-radius: 0;
+        outline: none;
+    }
+
 
     .main {
         padding-top: 50px;
