--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,12 @@
 @charset "utf-8";
 
+
+nav.floating {
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    background-color: #d0d0d0;
+}
 .first-view {
     height: calc(100vh - 110px);
     background: url(../images/index/bg_main.jpg);
@@ -116,11 +123,43 @@ img{
         padding-left: 20px;
         padding-right: 20px;
         height: 100%;
+        position: relative;
     }
 
     .header-logo {
         width: 100px;
     }
+
+    .header-site-menu {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        left: 0;
+        color: #ffffffff;
+        background-color: #736e69;
+        padding-top: 30px;
+        padding-bottom: 50px;
+        display: none;
+    }
+
+    .header-site-menu.is-show{
+        display: block;
+    }
+
+    .toggle-menu-button {
+        display: block;
+        width: 44px;
+        height: 34px;
+        background-image: url(../images/common/icon-menu.png);
+        background-size: 50%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: transparent;
+        border: none;
+        border-radius: 0;
+        outline: none;
+    }
+
 
     .main {
         padding-top: 50px;
